<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>us.hebi</groupId>
    <artifactId>hdrhistogram-visualizer</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>

    <name>HdrHistogram Visualizer</name>
    <description>Visualizer for HdrHistogram and JHiccup logs</description>
    <url>https://github.com/ennerf/HdrHistogramVisualizer</url>
    <inceptionYear>2015</inceptionYear>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <comments>Apache License 2.0</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Florian Enner</name>
            <timezone>US Eastern</timezone>
            <email>florian@hebirobotics.com</email>
        </developer>
    </developers>

    <properties>
        <main.class>us.hebi.histogram.visualizer.Visualizer</main.class>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
	<dependency> <!-- API, java.xml.bind module -->
	    <groupId>jakarta.xml.bind</groupId>
	    <artifactId>jakarta.xml.bind-api</artifactId>
	    <version>2.3.2</version>
	</dependency>

	<dependency> <!-- Runtime, com.sun.xml.bind module -->
	    <groupId>org.glassfish.jaxb</groupId>
	    <artifactId>jaxb-runtime</artifactId>
	    <version>2.3.2</version>
	</dependency>

        <dependency> <!-- JavaFX DI / CoC framework -->
            <groupId>com.airhacks</groupId>
            <artifactId>afterburner.fx</artifactId>
            <version>1.6.2</version>
        </dependency>

        <dependency> <!-- Google Guava (Common Lib) -->
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>18.0</version>
        </dependency>

        <dependency> <!-- Generated value classes -->
            <groupId>com.google.auto.value</groupId>
            <artifactId>auto-value</artifactId>
            <version>1.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
           <groupId>com.google.code.findbugs</groupId>
           <artifactId>jsr305</artifactId>
           <version>3.0.2</version>
           <scope>compile</scope> <!-- Must have this where procesor runs -->
        </dependency>
        <dependency> <!-- Useful JavaFX Controls -->
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>8.40.9</version>
        </dependency>

        <dependency>  <!-- Histogram for e.g. latencies -->
            <groupId>org.hdrhistogram</groupId>
            <artifactId>HdrHistogram</artifactId>
            <version>2.1.9</version>
        </dependency>

        <dependency> <!-- Primitive Lists -->
            <groupId>net.sf.trove4j</groupId>
            <artifactId>trove4j</artifactId>
            <version>3.0.3</version>
        </dependency>

        <dependency> <!-- Unit Tests -->
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
        <dependency>
           <groupId>javax.annotation</groupId>
           <artifactId>javax.annotation-api</artifactId>
           <version>1.3.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
	<plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-compiler-plugin</artifactId>
	    <version>3.8.1</version>
	    <configuration>
		<source>17</source>
		<target>17</target>
		<!-- <release>17</release>  -->
		<fork>true</fork>
		<compilerArgs>
		    <arg>-Xlint:all</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
		    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
		</compilerArgs>
		<!--for unmappable characters in classes-->
		<encoding>UTF-8</encoding>
		<showDeprecation>true</showDeprecation>
		<showWarnings>true</showWarnings>
	   </configuration>
	</plugin>
            <plugin> <!-- Builds an assembly jar that includes dependencies -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${main.class}</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin> <!-- Allows execution via 'mvn exec:java' -->
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.3</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <includeProjectDependencies>true</includeProjectDependencies>
                    <includePluginDependencies>true</includePluginDependencies>
                    <mainClass>${main.class}</mainClass>
                    <cleanupDaemonThreads>false</cleanupDaemonThreads>
                </configuration>
            </plugin>
        </plugins>

        <resources>
            <resource> <!-- Adds resources for afterburner.fx -->
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.fxml</include>
                    <include>**/*.css</include>
                    <include>**/*.properties</include>
                    <include>**/*.png</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.xml</include>
                    <include>**/*.*</include>
                </includes>
            </resource>
        </resources>

    </build>

</project>
